force-app/main/default/objects/OA_Monthly_Data_Snapshot__c/OA_Monthly_Data_Snapshot__c.object-meta.xml
<CustomObject>
    <description>This object is created to capture the monthly snapshot of revenue Forecast</description>
    <label>Monthly Data Snapshots</label>
    <nameField>
        <label>Monthly Data Snapshot Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Monthly Data Snapshots</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>