force-app/main/default/objects/OA_Monthly_Data_Snapshot__c/fields/OA_Data_Snapshots__c.field-meta.xml
<CustomField>
    <fullName>OA_Data_Snapshots__c</fullName>
    <label>Data Snapshots</label>
    <referenceTo>OA_Data_Snapshots__c</referenceTo>
    <relationshipLabel>Monthly Data Snapshots</relationshipLabel>
    <relationshipName>datasnapshots</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>