force-app/main/default/objects/OA_Monthly_Data_Snapshot__c/fields/OA_Gross_Revenue__c.field-meta.xml
<CustomField>
    <fullName>OA_Gross_Revenue__c</fullName>
    <label>Gross Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>