force-app/main/default/objects/OA_Monthly_Data_Snapshot__c/fields/OA_Risk_Adjusted_Revenue__c.field-meta.xml
<CustomField>
    <fullName>OA_Risk_Adjusted_Revenue__c</fullName>
    <label>Risk Adjusted Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>